重构 SelectSqlBuilder 和 SelectEngine，优化 SQL 构建逻辑
- 将 SelectSqlBuilder 的构造函数改为使用 Metadata 对象
- 使用 Apache Calcite 构建 SELECT SQL，增强了 SQL 生成的灵活性和可维护性
- 更新 SelectEngine，调整 SQL 执行逻辑，确保支持新的构建方法
- 添加 SelectSqlBuilder 的单元测试，验证基本查询、过滤和分页功能